# BaseLog

./: CMakeLists.txt  README.md
include/: baselogger.hh  basiclogger.hh
src/: baselogger.cc  basiclogger.cc
test/: log.txt  main.cpp
